--- a/managementSystem/templates/orders/add_order_item.html
+++ b/managementSystem/templates/orders/add_order_item.html
@@ -22,13 +22,31 @@
                         <label for="order_item" class="form-label">Description</label>
                         <textarea name="description" class="form-control" required></textarea>
                     </div>
-            
-                    <!-- Workers -->
+                    
+                    <!-- order no -->
+                    <div class="mb-3">
+                        <label for="workers" class="form-label">Item number:</label>
+                        <input type="number" name="order_no" id="deadline" class="form-control" required>
+                    </div>
+
+                    <!-- quantity -->
                     <div class="mb-3">
                         <label for="workers" class="form-label">Quantity:</label>
                         <input type="number" name="quantity" id="deadline" class="form-control" required>
                     </div>
-            
+                    
+                    <!-- size -->
+                    <div class="mb-3">
+                        <label for="workers" class="form-label">Size:</label>
+                        <input type="text" name="size" id="deadline" class="form-control" required>
+                    </div>
+                    
+                    <!-- color -->
+                    <div class="mb-3">
+                        <label for="workers" class="form-label">Color:</label>
+                        <input type="text" name="color" id="deadline" class="form-control" required>
+                    </div>
+
                     <!-- Deadline -->
                     <div class="mb-3">
                         <label for="deadline" class="form-label">Unit Price</label>
