--- a/managementSystem/templates/invoices/view_invoice.html
+++ b/managementSystem/templates/invoices/view_invoice.html
@@ -64,7 +64,10 @@
                                     <thead class="thead-light">
                                         <tr>
                                             <th class="text-gray-9 fs-14 fw-medium ">Item</th>
+                                            <th class="text-gray-9 fs-14 fw-medium ">Item Number</th>
                                             <th class="text-gray-9 fs-14 fw-medium text-end">Quantity</th>
+                                            <th class="text-gray-9 fs-14 fw-medium text-end">Size</th>
+                                            <th class="text-gray-9 fs-14 fw-medium text-end">Color</th>
                                             <th class="text-gray-9 fs-14 fw-medium text-end">Unit Price (GHS)</th>
                                             <th class="text-gray-9 fs-14 fw-medium text-end">Total (GHS)</th>
                                         </tr>
@@ -73,7 +76,10 @@
                                         {% for item in order_items %}
                                         <tr>
                                             <td class="text-gray-9 fs-14 fw-medium">{{ item.description }}</td>
+                                            <td class="text-gray-9 fs-14 fw-medium">{{ item.order_no }}</td>
                                             <td class="text-end">{{ item.quantity }}</td>
+                                            <td class="text-end">{{ item.size }}</td>
+                                            <td class="text-end">{{ item.color }}</td>
                                             <td class="text-end">{{ item.unit_price|floatformat:2 }}</td>
                                             <td class="text-end">{{ item.line_total|floatformat:2 }}</td>
                                         </tr>
