--- a/managementSystem/templates/notification.html
+++ b/managementSystem/templates/notification.html
@@ -10,7 +10,6 @@
                         <span class="fs-14 text-gray-5">View your all activities</span>
                     </div>
                 </div>
-
                 {% for n in notifications %}
                 <div class="card mb-3 border shadow-none">
                     <div class="px-3 py-3">
@@ -20,13 +19,14 @@
                             </div>
                         </div>
                     </div>
+                    {% empty %}
+                        <div class="flex-fill ml-3" data-toggle="tooltip" data-placement="right">
+                            <img src="{%static 'img/icons/notify-nodata.svg'%}" alt="img">
+                            <p class="fw-medium">No New Nofitications</p>
+                        </div>
+                    {% endfor %}
                 </div>
-                {% empty %}
-                <div class="d-flex align-items-center" data-toggle="tooltip" data-placement="right">
-                    <img src="{%static 'img/icons/notify-nodata.svg'%}" alt="img">
-                    <p class="fw-medium">No New Nofitications</p>
-                </div>
-            {% endfor %}
+                
 
             </div>
         </div>
